--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -23,7 +23,6 @@
       "type": "dart",
       "request": "attach"
     },
-
     {
       "name": "Flutter: Attach to Device",
       "type": "dart",
@@ -49,6 +48,12 @@
       "name": "Launch Chrome against localhost",
       "url": "http://localhost:8080",
       "webRoot": "${workspaceFolder}"
+    },
+    {
+      "name": "Flutter (lib\\presentation\\home_screen\\home_screen.dart)",
+      "type": "dart",
+      "request": "launch",
+      "program": "lib\\presentation\\home_screen\\home_screen.dart"
     }
   ]
 }
